--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@ body {
     padding: 30px;
 }
 
-.estiloGeralBotoes{
+.estiloGeralBotoes {
     border: none;
     font-weight: bold;
     border-radius: 5px;
@@ -48,11 +48,12 @@ body {
 }
 
 /* CONTEÚDO */
-main{}
+/* main {
+} */
 
 .containerListaProdutos {
     width: 100%;
-    max-width: 800px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -69,7 +70,7 @@ main{}
     padding: 20px;
     margin: 10px;
     border-radius: 5px;
-    transition: ease-in-out .1s;
+    transition: ease-in-out 0.1s;
     width: 20%;
 }
 
@@ -97,11 +98,12 @@ main{}
 }
 
 /* PREÇO TOTAL */
-.containerPrecoTotal{
+.containerPrecoTotal {
     text-align: center;
 }
-.containerPrecoTotal p{
+.containerPrecoTotal p {
     font-size: 1.4rem;
     font-weight: 600;
 }
-.containerPrecoTotal p span{}
+/* .containerPrecoTotal p span {
+} */
